add getManageSubscriptionAuthorizedCidrs and updateManageSubscriptionAuthorizedCidrs handlers
